github action to run docker build and push

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -47,5 +47,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags:
-            - webera/image-base:latest,webera/image-base:${{ steps.tag.outputs.value }}
+          tags: webera/image-base:latest,webera/image-base:${{ steps.tag.outputs.value }}
