github action to run docker build and push

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -44,23 +44,20 @@ jobs:
         id: vars
         run: |
           # Abort Github action if repository not startswith image-
-          echo ${{ github.event.repository.name }} | grep -qE '^ximage-'
+          echo ${{ github.event.repository.name }} | grep -qE '^image-'
 
           # Get image name from repository name
           DOCKER_REPO=$( echo ${{ github.event.repository.name }} | cut -f2 -d-)
           echo "::set-output name=repo::${DOCKER_REPO}"
 
-          # Get TAG on format expected by Flux for correct sorting
+          # Get TAG on format expected by Flux for get latest from correct sorting
           SHORT_SHA=$(git log --format="%H" -n 1 | cut -c1-7)
           TAG=$(date -u +${SHORT_SHA}-%Y%m%dT%H%M)
           echo "::set-output name=tag::${TAG}"
  
-      - run: echo ${{ steps.vars.outputs.tag }}
-      - run: echo ${{ steps.vars.outputs.repo }}
-
-#      - name: Docker build and push
-#        uses: docker/build-push-action@v3
-#        if: ${{ github.event_name != 'pull_request' }}
-#        with:
-#          push: true
-#          tags: webera/${{ steps.vars.outputs.repo }}:latest,webera/${{ steps.vars.outputs.repo }}:${{ steps.vars.outputs.tag }}
+      - name: Docker build and push
+        uses: docker/build-push-action@v3
+        if: ${{ github.event_name != 'pull_request' }}
+        with:
+          push: true
+          tags: webera/${{ steps.vars.outputs.repo }}:latest,webera/${{ steps.vars.outputs.repo }}:${{ steps.vars.outputs.tag }}
